change test string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Binger</string>
-    <string name="test">Test string</string>
+    <string name="test">New test string</string>
 </resources>
